finalizando projeto MVP

--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 ```
   npm create vite@latest
-  npm install @reduxjs/toolkit
+  npm install @reduxjs/toolkit react-redux
   npm install -D tailwindcss postcss autoprefixer
     inciar o tailwind -> npx tailwindcss init -p
 
